<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_gallery_black_24dp"
        android:title="Events" />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notification_black_24dp"
        android:title="Notification" />
</menu>
